# corotask

./: .gitignore  CMakeLists.txt
corotask/: CMakeLists.txt  corotask
corotask/common/: logging.cpp  logging.h  profiling.cpp  profiling.h  table.cpp  table.h  timeit.hpp  traits.h
corotask/ctl/: list.hpp
corotask/interface/: exec.hpp  root.hpp
corotask/model/: rank.cpp  rank.h
corotask/network/: client.cpp  client.h  prot.hpp  server.cpp  server.h
corotask/tasks/: awaitables.hpp  task.hpp
corotask/threads/: coro_pool.cpp  coro_pool.h  network_pool.cpp  network_pool.h  pool.cpp  pool.h
ct-agent/: CMakeLists.txt  main.cpp
playground/: CMakeLists.txt
playground/launch_test/: main.cpp
playground/segfault_handler/: main.cpp
tests/: CMakeLists.txt  tasks.cpp
